<resources>
    <string name="app_name">Money Manager</string>
    <string name="plus_symbol">+</string>
    <string name="this_month">This month</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="summary">Summary</string>
    <string name="total">Total</string>
    <string name="empty_string_placeholder">0</string>
    <string name="add_transactions">Add Transactions</string>
    <string name="minus_symbol">-</string>
    <string name="transfer_symbol"><![CDATA[-->]]></string>
    <string name="transfer">Transfer</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accounts">Accounts</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="select">Select</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="category_name">Category name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_category_one">To select category one</string>
    <string name="select_category_two">To select category two</string>
    <string name="button_to_select_date">To select date</string>
    <string name="currencies">currencies</string>
    <string name="selecting_the_icon">Selecting the icon</string>
    <string name="selecting_the_color">Selecting the color</string>
    <string name="create">Create</string>
    <string name="plots">Plots</string>
    <string name="balance">Balance</string>
    <string name="initial_balance">Initial balance</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="transaction_breakdown">Transaction Breakdown</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="amount">Amount</string>
    <string name="transaction_info">Transaction Info</string>
    <string name="_999_00">999.00</string>
    <string name="example_date">26 Dec 2023</string>
    <string name="_date_placeholder_1">25 May 2024</string>
    <string name="_date_placeholder_2">30 June 2024</string>
    <string name="default_currency">CHF</string>
    <string name="budget">Budget</string>
    <string name="_0_0">0.0</string>
    <string name="hyphen">-</string>
    <string name="expense_analysis">Expense Analysis</string>
    <string name="transactions">Transactions</string>
    <string name="spinner_to_select_the_expense_category">Spinner to select the expense category</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="by_week">By Week</string>
    <string name="by_day">By Day</string>
    <string name="remaining">Remaining</string>
    <string name="analysis">Analysis</string>
    <string name="per_day">Per day</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="income_categories">Income Categories</string>
    <string name="categories">Categories</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="icon_for_the_picking_the_date">Icon for the picking the date</string>
    <string name="icon_for_selecting_account_or_category">Icon for selecting account or category</string>
    <string name="icon_for_selected_account_category">Icon for selected account/category</string>
</resources>