<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/home"
        android:title="Home" />

    <item
        android:title="This month">

        <menu>
            <item
                android:id="@+id/monthlyTransactionFragment"
                android:icon="@drawable/transactions"
                android:title="@string/transactions" />
            <item
                android:id="@+id/monthlyBudgetFragment"
                android:icon="@drawable/scale"
                android:title="@string/budget" />
            <item
                android:id="@+id/expenseAnalysisFragment"
                android:icon="@drawable/moneytransfer"
                android:title="@string/expense_analysis" />
            <item
                android:id="@+id/monthlyOverviewFragment"
                android:icon="@drawable/summary"
                android:title="@string/overview" />
        </menu>

    </item>

    <item
        android:title="History">

        <menu>
            <item
                android:id="@+id/transactionsFragment"
                android:icon="@drawable/transactions"
                android:title="Transactions" />
            <item
                android:id="@+id/summaryFragment"
                android:icon="@drawable/summary"
                android:title="Expenses"
                />
        </menu>

    </item>

    <item
        android:title="Analysis">

        <menu>
            <item
                android:id="@+id/plotTransactionFragment"
                android:icon="@drawable/graph"
                android:title="Custom plots" />

        </menu>
    </item>

    <item
        android:title="Info">

        <menu>

            <item
                android:id="@+id/balancesFragment"
                android:icon="@drawable/scale"
                android:title="@string/accounts" />

            <item
                android:id="@+id/settingsFragment2"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

        </menu>

    </item>

<!--    <item-->
<!--        android:title="">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/settingsFragment2"-->
<!--                android:icon="@drawable/settings"-->
<!--                android:title="Settings" />-->
<!--        </menu>-->
<!--    </item>-->





</menu>