<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="categoryViewModel"
        type="com.kinetx.moneymanager.CategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CategoryFragment">


        <EditText
            android:id="@+id/categoryNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/category_name"
            android:inputType="textPersonName"
            android:text="@{categoryViewModel.categoryName}"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/categoryRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:visibility="@{categoryViewModel.radioVisible}"
            app:layout_constraintStart_toStartOf="@+id/categoryNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/categoryNameEditText">


            <RadioButton
                android:id="@+id/categoryExpenseRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:clickable="@{categoryViewModel.radioEnabled}"
                android:checked="@{categoryViewModel.expenseSelected}"
                tools:layout_editor_absoluteX="212dp"
                tools:layout_editor_absoluteY="189dp" />

            <RadioButton
                android:id="@+id/categoryIncomeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:clickable="@{categoryViewModel.radioEnabled}"
                android:checked="@{categoryViewModel.incomeSelected}"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="194dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/categoryIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/categoryRadioGroup" />


        <TextView
            android:id="@+id/categoryColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/categoryIconText" />

        <ImageButton
            android:id="@+id/categoryIconButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="@+id/categoryIconText"
            app:layout_constraintStart_toStartOf="@+id/categoryIconText"
            app:layout_constraintTop_toBottomOf="@+id/categoryIconText"
            android:backgroundTint="@color/black"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitXY"/>

        <ImageButton
            android:id="@+id/categoryColorButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="@+id/categoryColorText"
            app:layout_constraintStart_toStartOf="@+id/categoryColorText"
            app:layout_constraintTop_toBottomOf="@+id/categoryColorText"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/category_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{categoryViewModel.addVisible}"
            android:layout_marginStart="160dp"
            android:layout_marginTop="50dp"
            android:text="@string/add"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryIconButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/category_update_button"
            android:visibility="@{categoryViewModel.editVisible}"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/category_delete_button" />

        <Button
            android:id="@+id/category_delete_button"
            android:visibility="@{categoryViewModel.editVisible}"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="60dp"
            android:text="@string/delete"
            android:backgroundTint="@color/red"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/categoryColorButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>