<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addTransactionViewModel"
            type="com.kinetx.moneymanager.viewmodel.AddTransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddTransactionFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_transaction_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="Expense"
            android:ems="5"
            android:hint="@string/empty_string_placeholder"
            android:text="@={addTransactionViewModel.transactionAmount}"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="textEnd"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/add_transaction_currency_spinner"
            style="@android:style/Widget.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currencies"
            android:minHeight="48dp"
            android:entries="@{addTransactionViewModel.currencySpinner}"
            app:layout_constraintBottom_toBottomOf="@+id/add_transaction_expense_amount"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/add_transaction_expense_amount" />

        <ImageButton
            android:id="@+id/add_transaction_category_two_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="70dp"
            android:background="@color/black"
            android:contentDescription="@string/select_category_two"
            android:scaleType="fitXY"
            android:src="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_transaction_expense_amount"/>

        <TextView
            android:id="@+id/t10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{addTransactionViewModel.buttonPositionTwoText}"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintEnd_toEndOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_category_two_btn"
            tools:text="Category" />

        <ImageButton
            android:id="@+id/add_transaction_category_one_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="30dp"
            android:background="@color/black"
            android:contentDescription="@string/select_category_one"
            android:scaleType="fitXY"
            android:src="@drawable/help"
            app:layout_constraintBottom_toBottomOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintEnd_toStartOf="@+id/add_transaction_category_two_btn"/>

        <TextView
            android:id="@+id/t11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@{addTransactionViewModel.buttonPositionOneText}"
            app:layout_constraintBottom_toTopOf="@+id/add_transaction_category_one_btn"
            app:layout_constraintEnd_toEndOf="@+id/add_transaction_category_one_btn"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_category_one_btn"
            tools:text="Account" />

        <TextView
            android:id="@+id/t12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/add_transaction_add_date_btn"
            app:layout_constraintEnd_toEndOf="@+id/add_transaction_add_date_btn"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_add_date_btn" />


        <com.kinetx.moneymanager.customview.DateView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@color/air_force_blue"
            android:layout_marginStart="30dp"
            android:id="@+id/add_transaction_add_date_btn"
            app:day="@{addTransactionViewModel.selectedDay}"
            app:month="@{addTransactionViewModel.selectedMonth}"
            app:year="@{addTransactionViewModel.selectedYear}"
            app:layout_constraintBottom_toBottomOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintStart_toEndOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintTop_toTopOf="@+id/add_transaction_category_two_btn" />

        <EditText
            android:id="@+id/add_transaction_comments_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="Comments"
            android:ems="10"
            android:hint="@string/comments"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={addTransactionViewModel.transactionComment}"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_category_one_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_category_two_btn"  />



        <TextView
            android:id="@+id/transaction_category_one_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/add_transaction_category_one_btn"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_category_one_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_category_one_btn"
            tools:text="TextView" />

        <TextView
            android:id="@+id/transaction_category_two_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintStart_toStartOf="@+id/add_transaction_category_two_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_category_two_btn"
            tools:text="TextView"  />

        <Button
            android:id="@+id/add_transaction_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/add"
            android:visibility="@{addTransactionViewModel.isAddBtnVisible()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_comments_edittext" />

        <Button
            android:id="@+id/add_transaction_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:text="@string/update"
            android:visibility="@{addTransactionViewModel.isUpdateDeleteBtnVisible()}"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_comments_edittext" />

        <Button
            android:id="@+id/add_transaction_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:visibility="@{addTransactionViewModel.isUpdateDeleteBtnVisible()}"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="@+id/add_transaction_update_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>