<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainFragment">

    <data>
        <variable
            name="addIncomeViewModel"
            type="com.kinetx.moneymanager.AddIncomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/add_income_income_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:autofillHints="Expense"
            android:ems="5"
            android:hint="@string/empty_string_placeholder"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            style="@android:style/Widget.TextView.SpinnerItem"
            android:id="@+id/add_income_currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@{addIncomeViewModel.currencySpinner}"
            app:layout_constraintBottom_toBottomOf="@+id/add_income_income_amount"
            app:layout_constraintLeft_toRightOf="@id/guideline" />

        <ImageButton
            android:id="@+id/add_income_add_category_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_income_income_amount"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/t10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintEnd_toEndOf="@+id/add_income_add_category_btn"
            app:layout_constraintStart_toStartOf="@+id/add_income_add_category_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_income_add_category_btn" />

        <ImageButton
            android:id="@+id/add_income_add_account_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_income_add_category_btn"
            app:layout_constraintEnd_toStartOf="@+id/add_income_add_category_btn"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/t11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            app:layout_constraintEnd_toEndOf="@+id/add_income_add_account_btn"
            app:layout_constraintStart_toStartOf="@+id/add_income_add_account_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_income_add_account_btn" />

        <Button
            android:id="@+id/add_income_add_date_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@{addIncomeViewModel.dateButton}"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_income_add_category_btn"
            app:layout_constraintStart_toEndOf="@+id/add_income_add_category_btn"/>

        <TextView
            android:id="@+id/t12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/add_income_add_date_btn"
            app:layout_constraintStart_toStartOf="@+id/add_income_add_date_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_income_add_date_btn" />

        <TextView
            android:id="@+id/add_income_comments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_income_add_date_btn" />

        <EditText
            android:id="@+id/add_income_comments_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/add_income_comments_text"
            app:layout_constraintTop_toBottomOf="@+id/add_income_comments_text" />

        <Button
            android:id="@+id/add_income_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_income_comments_edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>